@@ -105,6 +105,7 @@ exportMethods(qqmath)
 #exportMethods(ra)
 exportMethods(range)
 exportMethods(residuals)
+exportMethods(replaceZeros)
 #exportMethods(rngage)
 #exportMethods(rngquant)
 #exportMethods(rnglen)
